// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/StoriesPanel default 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel storiesHierarchies exists but is empty 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel when open on mobile device 1`] = `
<div
  class="css-nk32ej"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;
